# FiveDeez

./: .gitignore  Cargo.toml  Cross.toml  README.md  prepare.sh
.cargo/: config.toml
encrypt_payload/: Cargo.toml
encrypt_payload/src/: main.rs
src/: crypto.rs  loader.rs  main.rs  shellcode.rs  timing.rs
src/bypass/: amsi.rs  etw.rs  mod.rs
